--- a/update-event/src/assets/main.css
+++ b/update-event/src/assets/main.css
@@ -14,4 +14,10 @@ template {
     font-size: 16px;
 }
 
+h1 {
+    font-family: "pain-de-mie", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 
