--- a/update-event/src/assets/main.css
+++ b/update-event/src/assets/main.css
@@ -15,6 +15,7 @@ template {
 }
 
 h1 {
+    font-size: 2.3rem;
     font-family: "pain-de-mie", sans-serif;
     font-weight: 400;
     font-style: normal;
