--- a/update-event/src/assets/main.css
+++ b/update-event/src/assets/main.css
@@ -21,4 +21,13 @@ h1 {
     font-style: normal;
 }
 
+p {
+    font-family: "gill-sans-nova", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+strong {
+    font-weight: 700;
+}
 
