retning af event detail så den er sexy

--- a/update-event/src/assets/main.css
+++ b/update-event/src/assets/main.css
@@ -34,3 +34,9 @@ strong {
 em{
     font-style: italic;
 }
+
+a{
+    font-family: "gill-sans-nova", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
